--- a/themes/yeti/less/bootswatch.less
+++ b/themes/yeti/less/bootswatch.less
@@ -414,6 +414,12 @@ input[type="checkbox"] {
 	color: #ffffff;
 	font-size: 12px;
 	font-weight: 300;
+	& table {
+		background: #fff;
+	}
+	& a {
+		color: #75d7f7;
+	}
 }
 
 .panel {
