--- a/themes/yeti/less/variables.less
+++ b/themes/yeti/less/variables.less
@@ -545,7 +545,7 @@
 @popover-fallback-border-color:       @gray-dark;
 
 //** Popover title background color
-@popover-title-bg:                    @popover-bg;
+//@popover-title-bg:                    #333;
 
 //** Popover arrow width
 @popover-arrow-width:                 10px;
